style changes + corrections

--- a/fqw/src/main/resources/templates/lecturers.html
+++ b/fqw/src/main/resources/templates/lecturers.html
@@ -10,8 +10,8 @@
 
 <body layout:fragment="body">
     <main layout:fragment="main">
-        <section  class="contacts-form">
-            <div class="container form-container">
+        <section  class="selector-form">
+            <div class="container-fluid form-container">
                 <h2 class="section-header form-header">Получить документ</h2>
                 <div class="form-space flex">
                     <form method="post" class="form-body" th:action="@{/sql/lecturers}">
