--- a/fqw/src/main/resources/static/css/style.css
+++ b/fqw/src/main/resources/static/css/style.css
@@ -1,3 +1,4 @@
+
 html {
 	box-sizing: border-box;
 	background-image: linear-gradient(to right top, #f9fcff, #d8e6f7, #bad5f7, #89b7f3, #4b9ce7);
@@ -169,7 +170,7 @@ main {
 
 .form-body {
 	display: flex;
-	flex-shrink: 1;
+	flex-wrap: wrap;
 	flex-direction: row;
 	margin: 0;
 	align-items: center;
@@ -204,22 +205,38 @@ main {
 	line-height: 21px;
 	font-size: 12px;
 	min-height: 43px;
-	width: 100%;
+	max-width: 240px;
 }
+
+.selection-param__years{
+	display:flex;
+	flex-direction: row;
+}
+
+.selection-param__years__text{
+	font-size: 16px;
+	margin-right: 7px;
+	margin-left: 7px;
+}
+
+.selection-param__years__text:first-child {
+    font-size: 16px;
+    margin-right: 7px;
+	margin-left: 0;
+}
+
 
 .selector-patch {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: left;
-	max-width: 141px!important;
+
 
 	position: relative
 }
 
-.selector-patch:first-child {
-	max-width: 210px!important;
-}
+
 
 .select2-container {
 	max-width: 100% !important;
@@ -230,7 +247,7 @@ main {
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: left;
-	max-width: 145px;
+    max-width: 185px;
 	text-overflow: ellipsis;
 }
 
@@ -259,7 +276,7 @@ main {
 
 
 .val {
-	width: 121px;
+	max-width: 40px;
 	font-size: 16px;
 	border: 0;
 	border-bottom: 1px solid #E9E9E9;
@@ -280,6 +297,7 @@ main {
 
 
 .display-section {
+	display: flex;
     flex-direction: column;
     max-width: 100%;
     align-items: center;
