--- a/fqw/src/main/resources/templates/console.html
+++ b/fqw/src/main/resources/templates/console.html
@@ -2,16 +2,17 @@
 <html lang="en"
       xmlns:th='http://thymeleaf.org'
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      >
+      layout:decorate="~{layout}"
+>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-  <link rel="stylesheet" href="/css/media.css">
-  <link rel="stylesheet" href="/thirdParty/xterm/css/xterm.css">
+    <title>Web Console </title>
+  <link rel="stylesheet" th:href="@{/thirdParty/xterm/css/xterm.css}">
   <script type="text/javascript" src="/thirdParty/xterm/lib/xterm.js"></script>
   <script defer type="text/javascript" src="/js/console.js"></script>
 </head>
 <body>
+    <div id="terminal"></div>
 
 </body>
 </html>
