feat(main): select2 implementation fix (50% by Ivan)

--- a/fqw/src/main/resources/templates/console.html
+++ b/fqw/src/main/resources/templates/console.html
@@ -2,7 +2,6 @@
 <html lang="en"
       xmlns:th='http://thymeleaf.org'
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}"
 >
 <head>
     <meta charset="UTF-8">
@@ -12,7 +11,7 @@
   <script defer type="text/javascript" src="/js/console.js"></script>
 </head>
 <body>
-    <div id="terminal"></div>
+    <div class="terminal" id="terminal"></div>
 
 </body>
 </html>
