--- a/fqw/src/main/resources/static/css/style.css
+++ b/fqw/src/main/resources/static/css/style.css
@@ -212,25 +212,16 @@ main {
 	display:flex;
 	flex-direction: row;
 }
-<<<<<<< HEAD
-=======
 
->>>>>>> main
 .selection-param__years__text{
 	font-size: 16px;
 	margin-right: 7px;
 	margin-left: 7px;
 }
-<<<<<<< HEAD
-.selection-param__years__text:first-child {
-font-size: 16px;
-margin-right: 7px;
-=======
 
 .selection-param__years__text:first-child {
     font-size: 16px;
     margin-right: 7px;
->>>>>>> main
 	margin-left: 0;
 }
 
@@ -240,34 +231,26 @@ margin-right: 7px;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: left;
-<<<<<<< HEAD
-	position: relative
-}
-
-=======
-
+	max-height: 49px;
 
 	position: relative
 }
 
 
 
->>>>>>> main
 .select2-container {
 	max-width: 100% !important;
 }
 
 .selector-patch-2 {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: left;
-<<<<<<< HEAD
-	max-width: 185px;
-=======
+    display: flex;
+    flex-direction: column;
     max-width: 185px;
->>>>>>> main
-	text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    align-content: stretch;
+    min-height: 49px;
 }
 
 .selector-patch-2:first-child > {
