feat(main): initial implementation of input with multiple data, and update repo

--- a/fqw/src/main/resources/static/css/style.css
+++ b/fqw/src/main/resources/static/css/style.css
@@ -220,8 +220,8 @@ main {
 }
 
 .selection-param__years__text:first-child {
-    font-size: 16px;
-    margin-right: 7px;
+	font-size: 16px;
+	margin-right: 7px;
 	margin-left: 0;
 }
 
@@ -231,7 +231,7 @@ main {
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: left;
-
+	max-height: 49px;
 
 	position: relative
 }
@@ -245,10 +245,12 @@ main {
 .selector-patch-2 {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
-	justify-content: left;
-    max-width: 185px;
+	max-width: 185px;
 	text-overflow: ellipsis;
+	justify-content: flex-end;
+	flex-wrap: wrap;
+	align-content: stretch;
+	min-height: 49px;
 }
 
 .selector-patch-2:first-child > {
@@ -270,8 +272,8 @@ main {
 	white-space: nowrap;
 }
 
- option:hover {
-    background-color: #1846a8 !important;
+option:hover {
+	background-color: #1846a8 !important;
 }
 
 
@@ -298,9 +300,9 @@ main {
 
 .display-section {
 	display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    align-items: center;
+	flex-direction: column;
+	max-width: 100%;
+	align-items: center;
 }
 
 .footer {
@@ -657,10 +659,10 @@ main {
 	border: 2px #4670e4 solid;
 	border-radius: 3px;
 	background-color: #4670e4;
-    padding: 10px 50px;
+	padding: 10px 50px;
 	justify-content: center;
 	max-width: 265px;
-	
+
 }
 
 .download-button{
@@ -851,7 +853,7 @@ main {
 	width: 85%;
 	margin-bottom: 20px;
 	flex-wrap: wrap;
-    align-content: space-between;
+	align-content: space-between;
 	line-height: 20px;
 }
 
@@ -862,10 +864,10 @@ main {
 
 .text-space{
 	width: 65%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    align-content: space-around;
-    flex-wrap: wrap;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	align-content: space-around;
+	flex-wrap: wrap;
 }
