feat(main): added jquery.terminal to the project

--- a/fqw/src/main/resources/templates/console.html
+++ b/fqw/src/main/resources/templates/console.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="/css/console.css"/>
-<!--    <link rel="stylesheet" href="/thirdParty/xterm/css/xterm.css">-->
-<!--    <script defer src="/thirdParty/xterm/lib/xterm.js"></script>-->
+    <link rel="stylesheet" href="/thirdParty/jquery.terminal/css/jquery.terminal.css">
+    <script defer src="/thirdParty/jquery.terminal/js/jquery.terminal-2.43.0.js"></script>
     <script defer src="/js/console.js"></script>
 </head>
 <body>
