--- a/fqw/src/main/resources/static/css/style.css
+++ b/fqw/src/main/resources/static/css/style.css
@@ -79,18 +79,10 @@ body {
 	flex-direction: column;
 	min-width: 760px;
 	width: 100%;
-	font-family: "Muller", Arial, Helvetica, sans-serif;
+	font-family: "Muller", Arial, Helvetica, sans-serif !important;
+	background-image: linear-gradient(to right top, #f9fcff, #d8e6f7, #bad5f7, #89b7f3, #4b9ce7);
+}
 
-}
-/*
-.container {
-	max-width: 1800px;
-	padding-left: 45px;
-	padding-right: 45px;
-	margin: 0 auto;
-	width: 100%;
-}
-*/
 .nav {
 	display: flex;
 	align-items: center;
@@ -110,8 +102,7 @@ body {
 
 .header__container {
 	align-items: center;
-	padding-top: 25px;
-	padding-bottom: 25px;
+	padding: 25px 30px;
 	border-radius: 0 0 32px 32px;
 	background-color: rgb(251, 252, 255);
 	box-shadow: 21px 67px 119px 0px rgba(70, 156, 235, 0.75);
@@ -197,6 +188,74 @@ main {
 	justify-content: center;
 }
 
+.bootstrap-select .dropdown-menu span.text {
+	display: block !important;
+	text-overflow: ellipsis !important;
+}
+
+.bootstrap-select.show-tick .dropdown-menu li a span.text {
+	margin-right: 0 !important;
+}
+
+.selector-patch {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: left;
+	max-height: 49px;
+	max-width: 200px;
+	position: relative
+}
+
+.selector-patch-2 {
+	display: flex;
+	flex-direction: column;
+	max-width: 185px;
+	text-overflow: ellipsis;
+	justify-content: flex-end;
+	flex-wrap: wrap;
+	align-content: stretch;
+	min-height: 49px;
+}
+
+.val {
+	max-width: 40px;
+	font-size: 16px;
+	border: 0;
+	border-bottom: 1px solid #E9E9E9;
+}
+
+.selection-param {
+	line-height: 21px;
+	font-size: 12px;
+	min-height: 43px;
+	max-width: 240px;
+	margin: 0;
+}
+
+.bootstrap-select .dropdown-menu{
+	max-width: 600px !important;
+}
+
+.selection-param__years{
+	display:flex;
+	flex-direction: row;
+}
+
+.selection-param__years__text{
+	font-size: 16px;
+	margin-right: 7px;
+	margin-left: 7px;
+}
+
+.selection-param__years__text:first-child {
+	font-size: 16px;
+	margin-right: 7px;
+	margin-left: 0;
+}
+
+
+/*
 .selection{
 	max-width: 190px;
 }
@@ -220,21 +279,11 @@ main {
 }
 
 .selection-param__years__text:first-child {
-	font-size: 16px;
-	margin-right: 7px;
+    font-size: 16px;
+    margin-right: 7px;
 	margin-left: 0;
 }
 
-
-.selector-patch {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: left;
-	max-height: 49px;
-
-	position: relative
-}
 
 
 
@@ -243,14 +292,14 @@ main {
 }
 
 .selector-patch-2 {
-	display: flex;
-	flex-direction: column;
-	max-width: 185px;
-	text-overflow: ellipsis;
-	justify-content: flex-end;
-	flex-wrap: wrap;
-	align-content: stretch;
-	min-height: 49px;
+    display: flex;
+    flex-direction: column;
+    max-width: 185px;
+    text-overflow: ellipsis;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    align-content: stretch;
+    min-height: 49px;
 }
 
 .selector-patch-2:first-child > {
@@ -272,17 +321,12 @@ main {
 	white-space: nowrap;
 }
 
-option:hover {
-	background-color: #1846a8 !important;
+ option:hover {
+    background-color: #1846a8 !important;
 }
 
+*/
 
-.val {
-	max-width: 40px;
-	font-size: 16px;
-	border: 0;
-	border-bottom: 1px solid #E9E9E9;
-}
 
 
 .form-button {
@@ -568,7 +612,7 @@ option:hover {
 }
 
 .leveling {
-	padding: 0;
+	padding: 0!important;
 	overflow-x: auto;
 	overflow-y: hidden;
 	box-shadow: -1px 1px 29px -2px rgba(70, 156, 235, 0.75);
