--- a/fqw/src/main/resources/templates/layout.html
+++ b/fqw/src/main/resources/templates/layout.html
@@ -11,10 +11,19 @@
     <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/media.css">
-    <link rel="stylesheet" href="/thirdParty/select2/css/select2.min.css">
     <script type="text/javascript" src="/thirdParty/jquery/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="/thirdParty/select2/js/select2.min.js"></script>
     <script type="text/javascript" src="/thirdParty/js-sha256/sha256.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.js"></script>
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <!-- bootstrap-select additional library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.17/css/bootstrap-select.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.17/js/bootstrap-select.min.js"></script>
+
     <script defer src="/js/dataUtils.js"></script>
     <script defer src="/js/uploadDataForm.js"></script>
     <script defer src="/js/index.js"></script>
