feat(main): refactoring, correcting models, fixing business logics, and correcting docker configurations

--- a/hub/src/main/resources/templates/index.html
+++ b/hub/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <header class="hub__header">
         <div class="container-fluid hub__header__container">
-            <a th:href="@{}">
+            <a th:href="@{/}">
                 <div class="header__logo-inside flex">
                     <img src="/img/rudn-logotip.svg" fill="#0570b8" class = "logo">
                 </div>
