feat(main): refactoring, correcting models, fixing business logics, and correcting docker configurations

--- a/fqw/src/main/resources/static/css/console.css
+++ b/fqw/src/main/resources/static/css/console.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'Press Start 2P';
+    src: local('Press Start 2P'),
+    url('../fonts/PressStart2P-Regular.ttf');
+    font-weight: 400;
+}
 
 
 html {
