--- a/fqw/src/main/resources/templates/layout.html
+++ b/fqw/src/main/resources/templates/layout.html
@@ -37,7 +37,7 @@
         <div class="container-fluid flex">
             <a th:href="@{/}" class="header__logo">
                 <div class="header__logo-inside flex"><img src="/img/rudn_logo.png" alt="РУДН" class="header__logo__picture"></div></a>
-            <nav class="nav flex">
+            <nav class="nav flex col-lg-8">
                 <ul class="list-reset nav__list flex">
 
 
@@ -70,7 +70,7 @@
 </body>
 
 <footer class="footer">
-    <div class="container footer__container">
+    <div class="container-fluid footer__container">
         <div class="footer__left">
             <ul class="footer__list">
                 <li class="footer__list__item">
