--- a/fqw/src/main/resources/templates/lecturers.html
+++ b/fqw/src/main/resources/templates/lecturers.html
@@ -11,7 +11,7 @@
 
 <body layout:fragment="body">
 <main layout:fragment="main">
-    <section  class="section-form">
+    <section  class="selector-form">
         <div class="container-fluid form-container">
             <h2 class="section-header form-header">Получить документ</h2>
             <div class="form-space flex">
