--- a/fqw/src/main/resources/static/css/media.css
+++ b/fqw/src/main/resources/static/css/media.css
@@ -32,6 +32,7 @@
 
     .header__logo{
       margin-right: auto;
+      padding-left: 45px;
     }
 
     .nav{
@@ -85,9 +86,12 @@
       .selector-patch {
         max-width: 180px ;
         min-width: 100px;
+        font-size: 13px;
       }
 
-
+      .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+        width: 100% !important;
+    }
 
       .selector-patch-2{
         max-width: 140px;
@@ -112,13 +116,21 @@
     .val{
       width: 90%;
     }
+
+    .display{
+      justify-content: center;
+      min-width: 660px;
+      overflow: scroll;
+      max-width: 100%;
+    }
+    
+.leveling{
+  padding: 0;
+  max-width: 95%;
+}
   
 }
 
 .td-table{
 word-break:break-word;
-}
-
-.leveling{
-padding: 0;
 }
