--- a/fqw/src/main/resources/static/css/style.css
+++ b/fqw/src/main/resources/static/css/style.css
@@ -120,14 +120,16 @@ body {
 }
 
 .nav__list {
-	list-style: none;
-	display: flex;
-	padding: 0;
-	align-items: center;
+	margin: 0;
+    list-style: none;
+    display: flex;
+    padding: 0;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
 .nav__links {
-	border: 2px solid transparent;
 	padding: 5px;
 	color: #4670e4;
 	text-decoration: none;
@@ -615,6 +617,7 @@ main {
 	padding: 0!important;
 	overflow-x: auto;
 	overflow-y: hidden;
+	max-width: 100%;
 	box-shadow: -1px 1px 29px -2px rgba(70, 156, 235, 0.75);
 	-webkit-box-shadow: -1px 1px 29px -2px rgba(70, 156, 235, 0.75);
 	-moz-box-shadow: -1px 1px 29px -2px rgba(70, 156, 235, 0.75);
@@ -622,25 +625,28 @@ main {
 }
 
 .nav__links:hover {
+	text-decoration: none; 
 	padding-bottom: 5px;
 	border-bottom: 2px solid#4670e4;
-	transition: border-bottom 0.3s ease-in-out;
+	transition: border-bottom 0.1s ease-in-out;
 }
 
 
 .nav__links:focus {
+	text-decoration: none; 
 	padding: 5px;
 	border-bottom: 2px solid#0051ff;	;
-	transition: border 0.3s ease-in-out;
+	transition: border 0.4s ease-in-out;
 }
 
 
 .nav__links:active {
+	text-decoration: none; 
 	padding-bottom: 5px;
-	outline: 2px solid #0051ff;
-	transition: border 0.3s ease-in-out;
+	font-size: 17px;
+	transition: font-size 0.3s ease-in-out;
 	color: #0051ff;
-	transition: color 0.3s ease-in-out;
+	transition: color 0.5s ease-in-out;
 }
 
 .send-file{
@@ -713,13 +719,15 @@ main {
 	line-height: 32px;
 	font-weight: 700;
 	font-size: 1.125rem;
+	color: #FFFFFF !important;
 	text-decoration: none;
-	color: #FFFFFF;
 	width: 100%;
-
 }
 
-
+.download-button:active{
+	text-decoration: none;
+	border: 0;
+}
 
 
 
