--- a/frontend/src/Layout/header.css
+++ b/frontend/src/Layout/header.css
@@ -1,5 +1,8 @@
 .header{
-	margin-bottom: 45px ;
+	margin-bottom: 95px ;
+	-webkit-box-shadow: 0px 13px 7px 0px rgba(0, 0, 0, 0.24);
+	-moz-box-shadow: 0px 13px 7px 0px rgba(0, 0, 0, 0.24);
+	box-shadow: 0px 13px 7px 0px rgba(0, 0, 0, 0.24);
 }
 
 
@@ -23,7 +26,6 @@
 .header__container {
 	align-items: center;
 	padding: 25px 30px;
-	border-radius: 0 0 32px 32px;
 	background-color: rgb(255, 255, 255);
 	box-shadow: 21px 67px 119px 0px rgba(70, 156, 235, 0.75);
 	-webkit-box-shadow: 21px 67px 119px 0px rgba(70, 156, 235, 0.75);
