--- a/frontend/src/SearchForm/Form.css
+++ b/frontend/src/SearchForm/Form.css
@@ -1,3 +1,8 @@
+main{
+	min-height: 55vh;
+}
+
+
 .form-container {
     border-radius: 15px;
     padding: 0;
@@ -22,8 +27,11 @@
 	background-color: #FFFFFF;
 	border-radius: 15px;
 	min-height: 106px;
-	border: 5px solid rgba(70, 156, 235, 0.75);
+	border: 5px solid rgba(24, 117, 224, 0.788);
 	width: 100%;
+	-webkit-box-shadow: 0px 13px 7px 0px rgba(0, 0, 0, 0.24);
+	-moz-box-shadow: 0px 13px 7px 0px rgba(0, 0, 0, 0.24);
+	box-shadow: 0px 13px 7px 0px rgba(0, 0, 0, 0.24);
 }
 
 
@@ -113,4 +121,11 @@
 
 .form-button{
     background-color: #4670e4;
+	text-transform:none;
+	min-width: 110px;
+	min-height: 45px;
+}
+
+.form-button:hover{
+	background-color: #2f4b97;
 }
