--- a/frontend/src/SearchForm/display.css
+++ b/frontend/src/SearchForm/display.css
@@ -5,11 +5,13 @@
     max-width: 95%;
     align-items: center;
     margin-bottom: 50px;
+	
 }
 
 table {
 	margin-bottom: 25px;
 	width: 100%;
+
 }
 
 
@@ -27,13 +29,16 @@ table thead th {
 .columns {
 	width: 100%;
 	min-width: 1190px;
+	-webkit-box-shadow: 0px 0px 16px -3px rgba(0, 0, 0, 0.76);
+	-moz-box-shadow: 0px 0px 16px -3px rgba(0, 0, 0, 0.76);
+	box-shadow: 0px 0px 16px -3px rgba(0, 0, 0, 0.76);
 }
 
 .tr-table {
 	background-color: #ffffff;
 	display: flex;
 	width: 100%;
-	outline: 0.5px solid black;
+
 ;
 	flex-direction: row;
 }
@@ -42,8 +47,8 @@ table thead th {
 	display: flex;
 	flex-direction: column;
 	width: 12.5%;
-	padding: 0.5%;
-	outline: 0.5px solid black;
+	background-color: #FFFFFF;
+	outline: 0.5px solid rgb(78, 78, 78);
 	justify-content: center;
 }
 
@@ -55,11 +60,13 @@ table thead th {
 	background-size: 32px 32px;
 	background-position: 5% 40%;
 	border: 2px #4670e4 solid;
+	
 	border-radius: 3px;
-	background-color: #4670e4;
-    padding: 10px 50px;
 	justify-content: center;
 	max-width: 265px;
+	-webkit-box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.32);
+	-moz-box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.32);
+	box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.32);
 	
 }
 
@@ -67,15 +74,10 @@ table thead th {
 	line-height: 32px;
 	font-weight: 700;
 	font-size: 1.125rem;
-	padding: 0;
+    padding: 20px 40px;
 	color: #FFFFFF !important;
 	text-decoration: none;
 	width: 100%;
-	background: transparent;
-}
-
-.download-button:active{
-	text-decoration: none;
-	border: 0;
+	text-transform:none;
 }
 
