--- a/frontend/src/SearchForm/Form.css
+++ b/frontend/src/SearchForm/Form.css
@@ -13,6 +13,16 @@ main{
 	margin-bottom: 45px;
 }
 
+.bs-select-all{
+	background-color: #4670e4!important;
+	color: #fff!important;
+}
+
+.bs-deselect-all{
+	background-color: #494949!important;
+	color: #fff!important;
+}
+
 .form-body {
 	display: flex;
 	flex-wrap: wrap;
