--- a/frontend/src/SearchForm/display.css
+++ b/frontend/src/SearchForm/display.css
@@ -81,3 +81,11 @@ table thead th {
 	text-transform:none;
 }
 
+.btn-group, .btn-group-vertical {
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex
+;
+    vertical-align: middle;
+    flex-direction: column;
+}
