--- a/frontend/src/SearchForm/display.css
+++ b/frontend/src/SearchForm/display.css
@@ -14,6 +14,12 @@ table {
 
 }
 
+.table{
+	-webkit-box-shadow: 0px 0px 20px 0px rgba(34, 60, 80, 1) !important;
+	-moz-box-shadow: 0px 0px 20px 0px rgba(34, 60, 80, 1);
+	box-shadow: 0px 0px 20px 0px rgba(34, 60, 80, 1) !important;
+}
+
 
 table thead th {
 	font-weight: bold;
@@ -81,11 +87,3 @@ table thead th {
 	text-transform:none;
 }
 
-.btn-group, .btn-group-vertical {
-    position: relative;
-    display: -ms-inline-flexbox;
-    display: inline-flex
-;
-    vertical-align: middle;
-    flex-direction: column;
-}
